2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Make letting boot_card() handle work area allocation
	mandatory. Rename RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION to
	BSP_BOOTCARD_OPTIONS.

2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am: BSP specific bsp_cleanup() is a dupe of a shared one.
	* startup/bspclean.c: Removed.

2008-09-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: Remove unnecessary include of bsp.h

2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am: Use top level shared bsp_get_work_area() implementation.
	* startup/bspgetworkarea.c: Removed.

2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* clock/ckinit.c: Remove unnecessary includes of rtems/libcsupport.h
	and rtems/libio.h.

2008-09-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, startup/bspstart.c: Create
	bsp_get_work_area() into its own file and use BSP Framework to
	perform more initialization.
	* startup/bspgetworkarea.c: New file.
	* startup/main.c: Removed.

2008-09-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: Review of all bsp_cleanup() implementations. In this
	phase, all prototypes were removed from bsp.h and empty
	implementations were removed and made to use the shared stub.

2008-09-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* clock/ckinit.c: The Shared Memory Driver no longer requires the
	special IOCTL in Clock_control. This was a hack which has existed
	since before the Classic API Timer Manager was implemented. All
	implementations of and references to Clock_control were removed.

2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console.c, timer/timer.c: Convert to "bool".

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c, timer/timerisr.c: Eliminate empty function from every
	benchmark timer driver. Fix spelling.

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>
